# Assignment-1

./: main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py
data/: 1.txt  2.txt
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
