[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "assignment_1"
authors = [{name = "Shiyang Xin", email = "Shiyang.xin@ucsf.edu"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/abcdefucsb/Assignment-1"
